fix: increase max-height of logo on contributor page for better visibility

--- a/wp-content/plugins/aras-marketplace/ui/src/scss/_contributor-page.scss
+++ b/wp-content/plugins/aras-marketplace/ui/src/scss/_contributor-page.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 	background-color: #f6f6f6;
 	&__logo {
-		max-height: 60px;
+		max-height: 80px;
 		width: auto;
 	}
 	&__title {
